# EIDSolution

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Board/: CMakeLists.txt
Board/ZDYZ-F103Nano/: CMakeLists.txt
Board/ZDYZ-F103Nano/Include/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
Board/ZDYZ-F103Nano/Include/Board/: Board.h
Board/ZDYZ-F103Nano/Source/Board/: Board.c
Board/ZDYZ-F103Nano/Source/Core/: stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
Project/: CMakeLists.txt
Project/Template/: CMakeLists.txt
Project/Template/Include/Application/: main.h
Project/Template/Source/Application/: main.c
cmake/: Utils.cmake  clangd.in
cmake/Chip/: STM32F103RC.cmake  STM32F407VE.cmake
cmake/Toolchain/: gcc-arm.cmake  riscv-wch.cmake
